# scs

./: .env.example  .gitignore  LICENSE  README.md  config.py  data_processing.py  database.py  llm_service.py  main.py  models.py  pyproject.toml  schema.sql  scraper.py  settings.ini.example  test_llm_service.py  test_main.py
.github/workflows/: tests.yml
data/: complaints.json  schema.sql
mcp-sqlite-server/: .env.mcp  mcp_config.json  server.py
mcp_sqlite_server/: __init__.py  config.json  server.py
services/: fetch.py  llm.py
static/css/: style.css
static/js/: app.js
templates/: index.html
templates/static/css/: style.css
templates/static/js/: app.js
test/: __init__.py  test_llm.py  test_llm_service.py  test_main.py  test_server.py
tests/: test_llm.py  test_main.py
utils/: config.py  db.py  imports.py  logging.py
