[project]
name = "scs"
version = "0.1.0"
description = "Smart Customer Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
